Adjust instructions; fix log date / time.

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
             <h2>Usage</h2>
             <ul>
                 <li>PM5: <strong>More Options</strong> -> <strong>Turn Wireless ON</strong></li>
-                <li>Click the <strong>Connect</strong> button above.</li>
-                <li>Give it a sec.</li>
+                <li>Click the <strong>Connect</strong> button above and pair to PM5.</li>
+                <li>Wait for the browser to do it's thing; might take some seconds.</li>
                 <li>Click boxes to highlight them.</li>
                 <li>Setup workout on PM5. Start rowing / skiing / biking. Watch numbers change. Get excited.</li>
             </ul>
