--- a/index.html
+++ b/index.html
@@ -23,20 +23,19 @@
             <p>
             This application connects to a 
             <a target="_blank" href="https://www.concept2.com/indoor-rowers/performance-monitors">Concept2
-            PM5</a> monitor over Bluetooth and reports all variables made available on it's
-            Bluetooth interface.
+            PM5</a> monitor over Bluetooth and displays all workout variables.
             </p>
 
             <h2>Requirements</h2>
             <ul>
                 <li><a target="_blank" href="https://caniuse.com/#feat=web-bluetooth">Web Bluetooth supported browser</a></li>
                 <li><a target="_blank" href="https://www.concept2.com/indoor-rowers/performance-monitors">PM5</a> attached to a
-                    <a href="https://www.concept2.com">Concept2 ergometer</a></li>
+                    <a target="_blank" href="https://www.concept2.com">Concept2 ergometer</a></li>
             </ul>
 
             <h2>Usage</h2>
             <ul>
-                <li>PM5: <strong>More Options</strong> -> <strong>Turn Wireless ON</strong></li>
+                <li>On the PM5, <strong>More Options</strong> -> <strong>Turn Wireless ON</strong></li>
                 <li>Click the <strong>Connect</strong> button above and pair to PM5.</li>
                 <li>Wait for the browser to do it's thing; might take some seconds.</li>
                 <li>Click boxes to highlight them.</li>
