Pull model number, machine type query (unsupported).

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <div id="controls">
             <button id="connect">Connect</button>
             <button id="toggle-instructions">Show instructions</button>
+            <span id="monitor-information"></span>
         </div>
 
         <div id="instruction-text" class="hidden">
